CLOUDP-58930: User can query/insert/update/delete documents from a collection (#2)